--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
