--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-top-loading-bar": "^2.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
